--- a/templates/actor/effects.hbs
+++ b/templates/actor/effects.hbs
@@ -4,85 +4,94 @@
   data-group='primary'
   data-tab='effects'
 >
-  <ol class='effects-list'>
-    {{#each effects as |section sid|}}
-      <li
-        class='effects-header'
-        data-effect-type='{{section.type}}'
-        data-drag="true"
-      >
-        <div class='effect-name'>
-          {{localize section.label}}
-        </div>
-        <div class='effect-source'>
-          {{localize 'EVENTIDE_RP_SYSTEM.Effect.Source'}}
-        </div>
-        <div class='effect-source'>{{localize 'EFFECT.TabDuration'}}</div>
-        <div class='effect-controls'>
-          <a
-            class='effect-control'
-            data-action='createDoc'
-            data-document-class='ActiveEffect'
-            data-origin="{{@root.actor.uuid}}"
-            data-img="icons/svg/aura.svg"
-            {{#if (eq section.type "inactive")}}
-              data-disabled="true"
-            {{else if (eq section.type "temporary")}}
-              data-duration.rounds="1"
-            {{/if}}
-            title='{{localize "DOCUMENT.Create" type='Effect'}}'
-          >
-            <i class='fas fa-plus'></i>
-            {{localize 'DOCUMENT.New' type='Effect'}}
-          </a>
-        </div>
-      </li>
+  {{#each effects as |section sid|}}
+    <div class="eventide-actor-data-section__header">
+      {{localize section.label}}
+    </div>
 
-      <ol class='effect-list'>
+    <table class='eventide-actor-data-table eventide-actor-data-table--effects'>
+      <thead class='eventide-actor-data-table__header'>
+        <tr>
+          <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</th>
+          <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Effect.Source'}}</th>
+          <th class='eventide-actor-data-table__header-cell'>{{localize 'EFFECT.TabDuration'}}</th>
+          <th class='eventide-actor-data-table__header-cell'>
+            <a
+              class='eventide-actor-data-create'
+              data-action='createDoc'
+              data-document-class='ActiveEffect'
+              data-origin="{{@root.actor.uuid}}"
+              data-img="icons/svg/aura.svg"
+              {{#if (eq section.type "inactive")}}
+                data-disabled="true"
+              {{else if (eq section.type "temporary")}}
+                data-duration.rounds="1"
+              {{/if}}
+              title='{{localize "DOCUMENT.Create" type='Effect'}}'
+              onclick='event.stopPropagation();'
+            >
+              <i class='fas fa-plus'></i>
+              {{localize 'DOCUMENT.New' type='Effect'}}
+            </a>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
         {{#each section.effects as |effect|}}
-          <li
-            class='effect effect flexrow'
+          <tr
+            class='eventide-actor-data-table__row{{#if effect.disabled}} eventide-actor-data-table__row--disabled{{/if}}'
             data-effect-id='{{effect.id}}'
             data-parent-id='{{effect.parent.id}}'
             data-document-class='ActiveEffect'
             data-drag="true"
           >
-            <div class='effect-name flexrow'>
-              <img class='effect-image' src='{{effect.img}}' height="24" width="24"/>
-              <div>{{effect.name}}</div>
-            </div>
-            <div class='effect-source'>{{effect.sourceName}}</div>
-            <div class='effect-duration'>{{effect.duration.label}}</div>
-            <div class='effect-controls flexrow'>
+            <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell'>
+              <div class='eventide-actor-data-table__name-content'>
+                <img src='{{effect.img}}' height="24" width="24"/>
+                <span>{{effect.name}}</span>
+              </div>
+            </td>
+            <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell'>{{effect.sourceName}}</td>
+            <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell'>{{effect.duration.label}}</td>
+            <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
               {{#if @root.editable}}
-              <a
-                class='effect-control'
-                data-action='toggleEffect'
-                title='{{localize "EVENTIDE_RP_SYSTEM.Effect.Toggle"}}'
-              >
-                <i class='fas {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}'></i>
-              </a>
+                <a
+                  class='eventide-actor-data-control eventide-actor-data-control--equip{{#if effect.disabled}} eventide-actor-data-control--disabled{{/if}}'
+                  data-action='toggleEffect'
+                  data-effect-id='{{effect.id}}'
+                  data-parent-id='{{effect.parent.id}}'
+                  title='{{localize "EVENTIDE_RP_SYSTEM.Effect.Toggle"}}'
+                  onclick='event.stopPropagation();'
+                >
+                  <i class='fas {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}'></i>
+                </a>
               {{/if}}
               <a
-                class='effect-control'
+                class='eventide-actor-data-control eventide-actor-data-control--edit'
                 data-action='viewDoc'
+                data-effect-id='{{effect.id}}'
+                data-parent-id='{{effect.parent.id}}'
                 title='{{localize "DOCUMENT.Update" type='Effect'}}'
+                onclick='event.stopPropagation();'
               >
                 <i class='fas fa-edit'></i>
               </a>
               {{#if @root.editable}}
-              <a
-                class='effect-control'
-                data-action='deleteDoc'
-                title='{{localize "DOCUMENT.Delete" type='Effect'}}'
-              >
-                <i class='fas fa-trash'></i>
-              </a>
+                <a
+                  class='eventide-actor-data-control eventide-actor-data-control--delete'
+                  data-action='deleteDoc'
+                  data-effect-id='{{effect.id}}'
+                  data-parent-id='{{effect.parent.id}}'
+                  title='{{localize "DOCUMENT.Delete" type='Effect'}}'
+                  onclick='event.stopPropagation();'
+                >
+                  <i class='fas fa-trash'></i>
+                </a>
               {{/if}}
-            </div>
-          </li>
+            </td>
+          </tr>
         {{/each}}
-      </ol>
-    {{/each}}
-  </ol>
+      </tbody>
+    </table>
+  {{/each}}
 </section>
