--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -1,217 +1,234 @@
 {{! Gear Tab }}
 <section class='tab gear {{tab.cssClass}}' data-group='primary' data-tab='gear'>
-  <div class="items-panel__section-header">
+
+  {{! Active Gear Section }}
+  <div class="eventide-actor-data-section__header">
     {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ActiveGear"}}
   </div>
-  <ol class='items-panel__list'>
-    <li class='items-panel__list-item items-panel__header'>
-      <div class='items-panel__name items-panel__header-cell'>{{localize 'Name'}}</div>
-      <div class="items-panel__prop items-panel__header-cell">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
-      <div class='items-panel__prop items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
-      <div class='items-panel__controls items-panel__header-cell'>
-        {{#if @root.editable}}
-          <a
-            class='item-control item-create'
-            title='{{localize "DOCUMENT.Create" type='Item'}}'
-            data-action='createDoc'
-            data-document-class='Item'
-            data-type='gear'
-          >
-            <i class='fas fa-plus'></i>
-            {{localize 'DOCUMENT.New' type='item'}}
-          </a>
-        {{/if}}
-      </div>
-    </li>
-    {{#each equippedGear as |item id|}}
-      <li
-        class='items-panel__list-item'
-        data-item-id='{{item._id}}'
-        data-drag='true'
-        data-document-class='Item'
-      >
-        <div class='items-panel__name items-panel__list-cell'>
-          <div class='items-panel__image'>
-            <a class='rollable' data-roll-type='item' data-action='roll'>
+
+  <table class='eventide-actor-data-table eventide-actor-data-table--gear'>
+    <thead class='eventide-actor-data-table__header'>
+      <tr>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'Name'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>
+          {{#if @root.editable}}
+            <a
+              class='eventide-actor-data-create'
+              title='{{localize "DOCUMENT.Create" type='Item'}}'
+              data-action='createDoc'
+              data-document-class='Item'
+              data-type='gear'
+            >
+              <i class='fas fa-plus'></i>
+              {{localize 'DOCUMENT.New' type='item'}}
+            </a>
+          {{/if}}
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each equippedGear as |item id|}}
+        <tr
+          class='eventide-actor-data-table__row{{#if item.system.cursed}} eventide-actor-data-table__row--cursed{{/if}}'
+          data-item-id='{{item._id}}'
+          data-drag='true'
+          data-document-class='Item'
+        >
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
+            <div class='eventide-actor-data-table__name-content'>
               <img
                 src='{{item.img}}'
                 title='{{item.name}}'
                 width='24'
                 height='24'
               />
-            </a>
-          </div>
-          <div>{{item.name}}</div>
-        </div>
-        <div class="items-panel__prop items-panel__list-cell">{{item.system.cost}}</div>
-        <div class='items-panel__prop items-panel__list-cell'>{{item.system.quantity}}</div>
-        <div class='items-panel__controls items-panel__list-cell'>
-        {{#if (or @root.isGM (not item.system.cursed))}}
+              <span>{{item.name}}</span>
+            </div>
+          </td>
+          <td class="eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable" data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.cost}}</td>
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.quantity}}</td>
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
+            {{#if (or @root.isGM (not item.system.cursed))}}
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--equip{{#if item.system.cursed}} eventide-actor-data-control--cursed{{/if}}"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}'
+                data-action='toggleGear'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fa-solid fa-helmet-battle'></i>
+              </a>
+              <a
+                class='eventide-actor-data-control eventide-actor-data-control--edit{{#if item.system.cursed}} eventide-actor-data-control--cursed{{/if}}'
+                title='{{localize "DOCUMENT.Update" type='Gear'}}'
+                data-action='viewDoc'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fas fa-edit'></i>
+              </a>
+              {{#if @root.editable}}
+                <a
+                  class='eventide-actor-data-control eventide-actor-data-control--delete{{#if item.system.cursed}} eventide-actor-data-control--cursed{{/if}}'
+                  title='{{localize "DOCUMENT.Delete" type='Gear'}}'
+                  data-action='deleteDoc'
+                  data-item-id='{{item._id}}'
+                >
+                  <i class='fas fa-trash'></i>
+                </a>
+              {{/if}}
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--increment{{#if item.system.cursed}} eventide-actor-data-control--cursed{{/if}}"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}'
+                data-action='incrementGear'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fa-solid fa-plus'></i>
+              </a>
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--decrement{{#if item.system.cursed}} eventide-actor-data-control--cursed{{/if}}"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
+                data-action='decrementGear'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fa-solid fa-minus'></i>
+              </a>
+            {{else}}
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--disabled eventide-actor-data-control--cursed"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}'
+                disabled>
+                  <i class="fa-solid fa-lock-keyhole"></i>
+              </a>
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--disabled eventide-actor-data-control--cursed"
+                title='{{localize "DOCUMENT.Update" type='Gear'}}'
+                disabled>
+                  <i class="fa-solid fa-lock-keyhole"></i>
+              </a>
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--disabled eventide-actor-data-control--cursed"
+                title='{{localize "DOCUMENT.Delete" type='Gear'}}'
+                disabled>
+                  <i class="fa-solid fa-lock-keyhole"></i>
+              </a>
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--disabled eventide-actor-data-control--cursed"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}'
+                disabled>
+                  <i class="fa-solid fa-lock-keyhole"></i>
+              </a>
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--disabled eventide-actor-data-control--cursed"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
+                disabled>
+                  <i class="fa-solid fa-lock-keyhole"></i>
+              </a>
+            {{/if}}
+          </td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+
+  {{! Unequipped Gear Section }}
+  <div class="eventide-actor-data-section__header">
+    {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UnequippedGear"}}
+  </div>
+
+  <table class='eventide-actor-data-table eventide-actor-data-table--gear'>
+    <thead class='eventide-actor-data-table__header'>
+      <tr>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'Name'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'Controls'}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each unequippedGear as |item id|}}
+        <tr
+          class='eventide-actor-data-table__row eventide-actor-data-table__row--unequipped{{#if (not item.system.quantity)}} eventide-actor-data-table__row--disabled{{/if}}'
+          data-item-id='{{item._id}}'
+          data-drag='true'
+          data-document-class='Item'
+        >
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
+            <div class='eventide-actor-data-table__name-content'>
+              <img
+                src='{{item.img}}'
+                title='{{item.name}}'
+                width='24'
+                height='24'
+              />
+              <span>{{item.name}}</span>
+            </div>
+          </td>
+          <td class="eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable" data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.cost}}</td>
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.quantity}}</td>
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
             <a
-              class="item-control item-equip"
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}'
+              class="eventide-actor-data-control eventide-actor-data-control--equip eventide-actor-data-control--unequipped {{#if (not item.system.quantity)}}eventide-actor-data-control--disabled{{/if}}"
+              {{#if (not item.system.quantity)}}disabled{{/if}}
+              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equip.label"}}'
               data-action='toggleGear'
+              data-item-id='{{item._id}}'
             >
-              <i class='fa-solid fa-helmet-battle{{#if item.system.cursed}} items-panel__controls--cursed{{/if}}'></i>
+              {{#if (not item.system.quantity)}}
+                <i class="fa-solid fa-triangle-exclamation"></i>
+              {{else}}
+                <i class='fa-solid fa-helmet-battle{{#if (and item.system.cursed @root.isGM)}} eventide-actor-data-control--cursed{{/if}}'></i>
+              {{/if}}
             </a>
-            <a
-              class='item-control item-edit'
-              title='{{localize "DOCUMENT.Update" type='Gear'}}'
-              data-action='viewDoc'
-            >
-              <i class='fas fa-edit{{#if item.system.cursed}} items-panel__controls--cursed{{/if}}'></i>
-            </a>
+            {{#if @root.isGM}}
+              <a
+                class='eventide-actor-data-control eventide-actor-data-control--edit'
+                title='{{localize "DOCUMENT.Update" type='Gear'}}'
+                data-action='viewDoc'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fas fa-edit'></i>
+              </a>
+            {{/if}}
             {{#if @root.editable}}
               <a
-                class='item-control item-delete'
+                class='eventide-actor-data-control eventide-actor-data-control--delete'
                 title='{{localize "DOCUMENT.Delete" type='Gear'}}'
                 data-action='deleteDoc'
+                data-item-id='{{item._id}}'
               >
-                <i class='fas fa-trash{{#if item.system.cursed}} items-panel__controls--cursed{{/if}}'></i>
+                <i class='fas fa-trash'></i>
               </a>
             {{/if}}
             <a
-              class="item-control item-increment"
+              class="eventide-actor-data-control eventide-actor-data-control--increment"
               title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}'
               data-action='incrementGear'
+              data-item-id='{{item._id}}'
             >
-              <i class='fa-solid fa-plus{{#if item.system.cursed}} items-panel__controls--cursed{{/if}}'></i>
+              <i class='fa-solid fa-plus'></i>
             </a>
-            <a
-              class="item-control item-decrement"
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
-              data-action='decrementGear'
-            >
-              <i class='fa-solid fa-minus{{#if item.system.cursed}} items-panel__controls--cursed{{/if}}'></i>
-            </a>
-          {{else}}
-            <a 
-              class="item-control items-panel__controls--cursed" 
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Unequip.label"}}' 
-              disabled>
-                <i class="fa-solid fa-lock-keyhole"></i>
-            </a>
-            <a
-              class="item-control items-panel__controls--cursed" 
-              title='{{localize "DOCUMENT.Update" type='Gear'}}' 
-              disabled>
-                <i class="fa-solid fa-lock-keyhole"></i>
-            </a>
-            <a
-              class="item-control items-panel__controls--cursed" 
-              title='{{localize "DOCUMENT.Delete" type='Gear'}}' 
-              disabled>
-                <i class="fa-solid fa-lock-keyhole"></i>
-            </a>
-            <a
-              class="item-control items-panel__controls--cursed"
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}' 
-              disabled>
-                <i class="fa-solid fa-lock-keyhole"></i>
-            </a>
-            <a
-              class="item-control items-panel__controls--cursed"
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}' 
-              disabled>
-                <i class="fa-solid fa-lock-keyhole"></i>
-            </a>
-          {{/if}}
-        </div>
-      </li>
-    {{/each}}
-    
-  </ol>
-  <div class="items-panel__section-header">
-    {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.UnequippedGear"}}
-  </div>
-  <ol class='items-panel__list'>
-    <li class='items-panel__list-item items-panel__header items-panel__header-cell'>
-      <div class='items-panel__name items-panel__header-cell'>{{localize 'Name'}}</div>
-      <div class="items-panel__prop items-panel__header-cell">{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
-      <div class='items-panel__prop items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}</div>
-      <div class='items-panel__controls items-panel__header-cell'>
-      </div>
-    </li>
-  {{#each unequippedGear as |item id|}}
-      <li
-        class='items-panel__list-item'
-        data-item-id='{{item._id}}'
-        data-drag='true'
-        data-document-class='Item'
-      >
-        <div class='items-panel__name items-panel__list-cell'>
-          <div class='items-panel__image'>
-            <a class='rollable' data-roll-type='item' data-action='roll'>
-              <img
-                src='{{item.img}}'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-            </a>
-          </div>
-          <div>{{item.name}}</div>
-        </div>
-        <div class="items-panel__prop items-panel__list-cell">{{item.system.cost}}</div>
-        <div class='items-panel__prop items-panel__list-cell'>{{item.system.quantity}}</div>
-        <div class='items-panel__controls items-panel__list-cell'>
-          <a
-            class="items-panel__control items-panel__controls--unequipped {{#if (not item.system.quantity)}}items-panel__controls--disabled{{/if}}"
-            {{#if (not item.system.quantity)}}disabled{{/if}}
-            title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equip.label"}}'
-            data-action='toggleGear'
-          >
-            {{#if (not item.system.quantity)}}
-              <i class="fa-solid fa-triangle-exclamation"></i>
-            {{else}}
-            <i class='fa-solid fa-helmet-battle{{#if (and item.system.cursed @root.isGM)}} items-panel__controls--cursed{{/if}}'></i>
-            {{/if}}
-          </a>
-          {{#if @root.isGM}}
-            <a
-              class='items-panel__control item-edit'
-              title='{{localize "DOCUMENT.Update" type='Gear'}}'
-              data-action='viewDoc'
-            >
-              <i class='fas fa-edit'></i>
-            </a>
-          {{/if}}
-          {{#if @root.editable}}
-            <a
-              class='items-panel__control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Gear'}}'
-              data-action='deleteDoc'
-            >
-              <i class='fas fa-trash'></i>
-            </a>
-          {{/if}}
-          
-          <a
-            class="items-panel__control item-increment"
-            title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Increment.label"}}'
-            data-action='incrementGear'
-          >
-            <i class='fa-solid fa-plus'></i>
-          </a>
             {{#if item.system.quantity}}
-            <a
-              class="items-panel__control item-decrement"
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
-              data-action='decrementGear'
-            >
-              <i class='fa-solid fa-minus'></i>
-            </a>
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--decrement"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
+                data-action='decrementGear'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fa-solid fa-minus'></i>
+              </a>
             {{else}}
-              <a 
-                class="items-panel__control items-panel__controls--disabled" 
-                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}' 
+              <a
+                class="eventide-actor-data-control eventide-actor-data-control--disabled"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Decrement.label"}}'
                 disabled>
                   <i class="fa-solid fa-ban"></i>
               </a>
             {{/if}}
-        </div>
-      </li>
-    {{/each}}
-  </ol>
+          </td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
 
 </section>
