--- a/templates/actor/statuses.hbs
+++ b/templates/actor/statuses.hbs
@@ -1,63 +1,66 @@
 {{! Statuses Tab }}
 <section class='tab statuses {{tab.cssClass}}' data-group='primary' data-tab='statuses'>
-  <ol class='items-panel__list items-panel__list--spanning'>
-  <li class='items-panel__list-item items-panel__header'>
-    <div class='items-panel__name items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</div>
-    <div class='items-panel__controls items-panel__header-cell'>
-      {{#if @root.editable }}
-        <a
-          class='items-panel__list-item item-create'
-          title='{{localize "DOCUMENT.Create" type='Item'}}'
-          data-action='createDoc'
+  <table class='eventide-actor-data-table eventide-actor-data-table--statuses'>
+    <thead class='eventide-actor-data-table__header'>
+      <tr>
+        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</th>
+        <th class='eventide-actor-data-table__header-cell'>
+          {{#if @root.editable }}
+            <a
+              class='eventide-actor-data-create'
+              title='{{localize "DOCUMENT.Create" type='Item'}}'
+              data-action='createDoc'
+              data-document-class='Item'
+              data-type='status'
+            >
+              <i class='fas fa-plus'></i>
+              {{localize 'DOCUMENT.New' type='Status'}}
+            </a>
+          {{/if}}
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each statuses as |item id|}}
+        <tr
+          class='eventide-actor-data-table__row'
+          data-item-id='{{item._id}}'
+          data-drag='true'
           data-document-class='Item'
-          data-type='status'
         >
-          <i class='fas fa-plus'></i>
-          {{localize 'DOCUMENT.New' type='Status'}}
-        </a>
-      {{/if}}
-      </div>
-    </li>
-    {{#each statuses as |item id|}}
-      <li
-        class='items-panel__list-item items-panel__list-cell'
-        data-item-id='{{item._id}}'
-        data-drag='true'
-        data-document-class='Item'
-      >
-        <div class='items-panel__name items-panel__list-cell'>
-          <div class='items-panel__image'>
-            <a class='rollable' data-roll-type='item' data-action='roll'>
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
+            <div class='eventide-actor-data-table__name-content'>
               <img
                 src='{{item.img}}'
                 title='{{item.name}}'
                 width='24'
                 height='24'
               />
-            </a>
-          </div>
-          <div>{{item.name}}</div>
-        </div>
-        <div class='items-panel__controls items-panel__list-cell'>
-          <a
-            class='items-panel__control item-edit'
-            title='{{localize "DOCUMENT.Update" type='Status'}}'
-            data-action='viewDoc'
-          >
-            <i class='fas fa-edit'></i>
-          </a>
-          {{#if @root.editable}}
+              <span>{{item.name}}</span>
+            </div>
+          </td>
+          <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
             <a
-              class='item-panel__control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Status'}}'
-              data-action='deleteDoc'
+              class='eventide-actor-data-control eventide-actor-data-control--edit'
+              title='{{localize "DOCUMENT.Update" type='Status'}}'
+              data-action='viewDoc'
+              data-item-id='{{item._id}}'
             >
-              <i class='fas fa-trash'></i>
+              <i class='fas fa-edit'></i>
             </a>
-          {{/if}}
-        </div>
-      </li>
-    {{/each}}
-  </ol>
-
+            {{#if @root.editable}}
+              <a
+                class='eventide-actor-data-control eventide-actor-data-control--delete'
+                title='{{localize "DOCUMENT.Delete" type='Status'}}'
+                data-action='deleteDoc'
+                data-item-id='{{item._id}}'
+              >
+                <i class='fas fa-trash'></i>
+              </a>
+            {{/if}}
+          </td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
 </section>
