--- a/templates/actor/combat-powers.hbs
+++ b/templates/actor/combat-powers.hbs
@@ -1,16 +1,16 @@
 {{! Combat Powers Tab }}
 <section class='tab combat-powers {{tab.cssClass}}' data-group='primary' data-tab='combatPowers'>
-  <table class='eventide-actor-data-table eventide-actor-data-table--combat-powers'>
-    <thead class='eventide-actor-data-table__header'>
-      <tr>
-        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</th>
-        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</th>
-        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.label'}}</th>
-        <th class='eventide-actor-data-table__header-cell'>
+  <table class='erps-data-table erps-data-table--combat-powers erps-data-table--flush-top' data-table-theme='{{userSheetTheme}}'>
+    <thead class='erps-data-table__header'>
+      <tr class='erps-data-table__header-row'>
+        <th class='erps-data-table__header-cell erps-data-table__header-cell--name'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</th>
+        <th class='erps-data-table__header-cell erps-data-table__header-cell--center'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</th>
+        <th class='erps-data-table__header-cell erps-data-table__header-cell--center'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.label'}}</th>
+        <th class='erps-data-table__header-cell erps-data-table__header-cell--controls'>
           {{#if (eq transformationCombatPowers.length 0)}}
             {{#if @root.editable }}
               <a
-                class='eventide-actor-data-create'
+                class='erps-data-table__create-button'
                 title='{{localize "DOCUMENT.Create" type='Item'}}'
                 data-action='createDoc'
                 data-document-class='Item'
@@ -21,82 +21,90 @@
               </a>
             {{/if}}
           {{else}}
-            <div class='eventide-actor-data-control eventide-actor-data-control--disabled'>
-              <i class='fas fa-lock' title='{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformedLocked"}}'></i>
+            <div class='erps-data-table__transformation-notice' title='{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformedLocked"}}'>
               <span>{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.Transformed"}}</span>
+              <i class='fas fa-lock'></i>
             </div>
           {{/if}}
         </th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class='erps-data-table__body'>
       {{#if (eq transformationCombatPowers.length 0)}}
         {{#each combatPowers as |item id|}}
-                  <tr
-          class='eventide-actor-data-table__row'
-          data-item-id='{{item._id}}'
-          data-drag='true'
-          data-document-class='Item'
-        >
-          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
-            <div class='eventide-actor-data-table__name-content'>
-              <img
-                src='{{item.img}}'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-              <span>{{item.name}}</span>
-            </div>
-          </td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.cost}}</td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.usageInfo}}</td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
-              <a
-                class='eventide-actor-data-control eventide-actor-data-control--edit'
-                title='{{localize "DOCUMENT.Update" type='Combat Power'}}'
-                data-action='viewDoc'
-                data-item-id='{{item._id}}'
-              >
-                <i class='fas fa-edit'></i>
-              </a>
-              {{#if @root.editable}}
+          <tr
+            class='erps-data-table__row'
+            data-item-id='{{item._id}}'
+            data-drag='true'
+            data-document-class='Item'
+          >
+            <td class='erps-data-table__cell erps-data-table__cell--name rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
+              <div class='erps-data-table__name-content'>
+                <img
+                  src='{{item.img}}'
+                  title='{{item.name}}'
+                  width='24'
+                  height='24'
+                />
+                <span>{{item.name}}</span>
+              </div>
+            </td>
+            <td class='erps-data-table__cell erps-data-table__cell--center rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.cost}}</td>
+            <td class='erps-data-table__cell erps-data-table__cell--center rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.usageInfo}}</td>
+            <td class='erps-data-table__cell erps-data-table__cell--controls'>
+              <div class='erps-data-table__controls'>
                 <a
-                  class='eventide-actor-data-control eventide-actor-data-control--delete'
-                  title='{{localize "DOCUMENT.Delete" type='Combat Power'}}'
-                  data-action='deleteDoc'
+                  class='erps-data-table__control-button erps-data-table__control-button--edit'
+                  title='{{localize "DOCUMENT.Update" type='Combat Power'}}'
+                  data-action='viewDoc'
                   data-item-id='{{item._id}}'
                 >
-                  <i class='fas fa-trash'></i>
+                  <i class='fas fa-edit'></i>
                 </a>
-              {{/if}}
+                {{#if @root.editable}}
+                  <a
+                    class='erps-data-table__control-button erps-data-table__control-button--delete'
+                    title='{{localize "DOCUMENT.Delete" type='Combat Power'}}'
+                    data-action='deleteDoc'
+                    data-item-id='{{item._id}}'
+                  >
+                    <i class='fas fa-trash'></i>
+                  </a>
+                {{/if}}
+              </div>
             </td>
           </tr>
         {{/each}}
       {{else}}
         {{#each transformationCombatPowers as |item id|}}
-                  <tr
-          class='eventide-actor-data-table__row eventide-actor-data-table__row--disabled'
-          data-item-id='{{item._id}}'
-          data-drag='true'
-          data-document-class='Item'
-        >
-          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
-            <div class='eventide-actor-data-table__name-content'>
-              <img
-                src='{{item.img}}'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-              <span>{{item.name}}</span>
-            </div>
-          </td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.cost}}</td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__prop-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>{{item.system.usageInfo}}</td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
-              <div class='eventide-actor-data-control eventide-actor-data-control--disabled'>
-                <i class='fas fa-lock'></i>
+          <tr
+            class='erps-data-table__row'
+            data-item-id='{{item._id}}'
+            data-drag='true'
+            data-document-class='Item'
+          >
+            <td class='erps-data-table__cell erps-data-table__cell--name rollable' data-roll-type='item' data-action='roll'>
+              <div class='erps-data-table__name-content'>
+                <img
+                  src='{{item.img}}'
+                  title='{{item.name}}'
+                  width='24'
+                  height='24'
+                />
+                <span>{{item.name}}</span>
+                <i class='fas fa-magic erps-data-table__transformation-indicator' title='{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformationPower"}}'></i>
+              </div>
+            </td>
+            <td class='erps-data-table__cell erps-data-table__cell--center rollable' data-roll-type='item' data-action='roll'>{{item.system.cost}}</td>
+            <td class='erps-data-table__cell erps-data-table__cell--center rollable' data-roll-type='item' data-action='roll'>{{item.system.usageInfo}}</td>
+            <td class='erps-data-table__cell erps-data-table__cell--controls'>
+              <div class='erps-data-table__controls'>
+                <div class='erps-data-table__control-button erps-data-table__control-button--disabled erps-data-table__control-button--locked' title='{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformedLocked"}}'>
+                  <i class='fas fa-lock'></i>
+                </div>
+                <div class='erps-data-table__control-button erps-data-table__control-button--disabled erps-data-table__control-button--locked' title='{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformedLocked"}}'>
+                  <i class='fas fa-lock'></i>
+                </div>
               </div>
             </td>
           </tr>
