--- a/templates/actor/features.hbs
+++ b/templates/actor/features.hbs
@@ -6,14 +6,14 @@
 >
   {{! Features list now spans the full width since abilities moved to header }}
   <section class='main'>
-    <table class='eventide-actor-data-table eventide-actor-data-table--features'>
-      <thead class='eventide-actor-data-table__header'>
-        <tr>
-          <th class='eventide-actor-data-table__header-cell'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Name"}}</th>
-          <th class='eventide-actor-data-table__header-cell'>
+    <table class='erps-data-table erps-data-table--features erps-data-table--flush-top' data-table-theme='{{userSheetTheme}}'>
+      <thead class='erps-data-table__header'>
+        <tr class='erps-data-table__header-row'>
+          <th class='erps-data-table__header-cell erps-data-table__header-cell--name'>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Name"}}</th>
+          <th class='erps-data-table__header-cell erps-data-table__header-cell--controls'>
             {{#if @root.editable}}
               <a
-                class='eventide-actor-data-create'
+                class='erps-data-table__create-button'
                 title='Create item'
                 data-action='createDoc'
                 data-document-class='Item'
@@ -26,44 +26,46 @@
           </th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class='erps-data-table__body'>
         {{#each features as |item id|}}
-                  <tr
-          class='eventide-actor-data-table__row'
-          data-item-id='{{item._id}}'
-          data-drag='true'
-          data-document-class='Item'
-        >
-          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
-            <div class='eventide-actor-data-table__name-content'>
-              <img
-                src='{{item.img}}'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-              <span>{{item.name}}</span>
-            </div>
-          </td>
-            <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
-              <a
-                class='eventide-actor-data-control eventide-actor-data-control--edit'
-                title='{{localize "DOCUMENT.Update" type='feature'}}'
-                data-action='viewDoc'
-                data-item-id='{{item._id}}'
-              >
-                <i class='fas fa-edit'></i>
-              </a>
-              {{#if @root.editable}}
+          <tr
+            class='erps-data-table__row'
+            data-item-id='{{item._id}}'
+            data-drag='true'
+            data-document-class='Item'
+          >
+            <td class='erps-data-table__cell erps-data-table__cell--name rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
+              <div class='erps-data-table__name-content'>
+                <img
+                  src='{{item.img}}'
+                  title='{{item.name}}'
+                  width='24'
+                  height='24'
+                />
+                <span>{{item.name}}</span>
+              </div>
+            </td>
+            <td class='erps-data-table__cell erps-data-table__cell--controls'>
+              <div class='erps-data-table__controls'>
                 <a
-                  class='eventide-actor-data-control eventide-actor-data-control--delete'
-                  title='{{localize "DOCUMENT.Delete" type='feature'}}'
-                  data-action='deleteDoc'
+                  class='erps-data-table__control-button erps-data-table__control-button--edit'
+                  title='{{localize "DOCUMENT.Update" type='feature'}}'
+                  data-action='viewDoc'
                   data-item-id='{{item._id}}'
                 >
-                  <i class='fas fa-trash'></i>
+                  <i class='fas fa-edit'></i>
                 </a>
-              {{/if}}
+                {{#if @root.editable}}
+                  <a
+                    class='erps-data-table__control-button erps-data-table__control-button--delete'
+                    title='{{localize "DOCUMENT.Delete" type='feature'}}'
+                    data-action='deleteDoc'
+                    data-item-id='{{item._id}}'
+                  >
+                    <i class='fas fa-trash'></i>
+                  </a>
+                {{/if}}
+              </div>
             </td>
           </tr>
         {{/each}}
